# orkis

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
agent-runtime/: agent-manager.ts  server.ts  tsconfig.json  types.ts
docs/claude-agent-sdk/: overview.md  python-sdk.md
docs/codex-sdk/: overview.md
scripts/: README.md  demo-claude-code.ts  demo-codex.ts  demo-steering.ts  package.json  test-runtime-client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_bridge.rs  lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: agent-header.tsx  agent-panel.tsx  agent-tabs.tsx  new-agent-dialog.tsx  sidebar.tsx  titlebar.tsx
src/components/tabs/: activity-tab.tsx  code-changes-tab.tsx  messages-tab.tsx  plans-tab.tsx
src/store/: agent-store.ts
